# windactionsAU

./: LICENSE  README.md  pyproject.toml
src/windactionsAU/: __init__.py  aerodynamic_shape_factors.py  design_wind_pressure.py  utils.py  wind_pressure.py  wind_speed.py
tests/: test_utils.py  test_wind_speed.py
