[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "windactionsAU"
authors = [{name = "Darryll Shanks", email = "darryll.shanks@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]
dynamic = ["version", "description"]
dependencies = ["numpy", "pandas"]

[project.urls]
Home = "https://github.com/darryllshanks/windactionsAU"
Issues = "https://github.com/darryllshanks/windactionsAU/issues"